@@ -57,9 +57,11 @@ will work. Shell is almost certainly already installed on your system.
 
 You will need asciidoctor to format the documentation.
 
-golint, shellcheck, mercurial, cvs, and rsync are required for the
-full regression tests, but not for running the code. Only a subset of
-the tests will be run in their absence.  The cvs-fast-export and
+The repotool mirror code needs rsync.
+
+golint, shellcheck, mercurial, and cvs are required for the full
+regression tests, but not for running the code. Only a subset of the
+tests will be run in their absence.  The cvs-fast-export and
 Subversion svnadmin importer are also required for testing. Very old
 versions of Subversion (certainly 1.6 or earlier, but not 1.9 or
 later) will cause one spurious test failure.
