@@ -164,7 +164,7 @@ the indicated directory. Note: A Subversion file URL has *three*
 slashes after the "file:" prefix!
 
 The mirror command can also be passed an rsync URL.  This
-will usually be faster than mirroring through the eqyivalent
+will usually be faster than mirroring through an equivalent
 Subversion URL.
 
 The "version" command reports the version level of the software.
