@@ -11,7 +11,7 @@ xyzzy.map
 xyzzy.opts
 
 Checksums to make sure file contents correct:
-a66839ba6bc97e9888efa064ef3dea2b  ./Makefile
+52403b85d7ae336bd0a40ff4a2289659  ./Makefile
 8f44c96b9942ad7655b17fec218e75f7  ./xyzzy.lift
 91c78d0cfe552dbe6de5ea8d17b726b8  ./xyzzy.map
 4b72635a7976f13fbd51a7c79a142733  ./xyzzy.opts
