@@ -1,0 +1,189 @@
+SVN-fs-dump-format-version: 2
+
+
+Revision-number: 0
+Prop-content-length: 56
+Content-length: 56
+
+K 8
+svn:date
+V 27
+2011-11-30T16:40:02.180831Z
+PROPS-END
+
+Revision-number: 1
+Prop-content-length: 177
+Content-length: 177
+
+K 10
+svn:author
+V 3
+esr
+K 8
+svn:date
+V 27
+2011-11-30T16:41:55.154754Z
+K 7
+svn:log
+V 79
+A vanilla repository - standard layout, linear history, no tags, no branches. 
+
+PROPS-END
+
+Node-path: branches
+Node-kind: dir
+Node-action: add
+Prop-content-length: 10
+Content-length: 10
+
+PROPS-END
+
+
+Node-path: tags
+Node-kind: dir
+Node-action: add
+Prop-content-length: 10
+Content-length: 10
+
+PROPS-END
+
+
+Node-path: trunk
+Node-kind: dir
+Node-action: add
+Prop-content-length: 10
+Content-length: 10
+
+PROPS-END
+
+
+Revision-number: 2
+Prop-content-length: 114
+Content-length: 114
+
+K 10
+svn:author
+V 3
+esr
+K 8
+svn:date
+V 27
+2011-11-30T16:43:52.297468Z
+K 7
+svn:log
+V 16
+First revision.
+
+PROPS-END
+
+Node-path: trunk/README
+Node-kind: file
+Node-action: add
+Text-content-md5: a60319cd0397d5c9bcc0652f9a54c56c
+Text-content-sha1: 29cb70183455e46d32a129a75de9fb544c248c08
+Prop-content-length: 10
+Text-content-length: 23
+Content-length: 33
+
+PROPS-END
+This is a sample file.
+
+
+Revision-number: 3
+Prop-content-length: 115
+Content-length: 115
+
+K 10
+svn:author
+V 3
+esr
+K 8
+svn:date
+V 27
+2011-11-30T16:45:21.726591Z
+K 7
+svn:log
+V 17
+Second revision.
+
+PROPS-END
+
+Node-path: trunk/README
+Node-kind: file
+Node-action: change
+Text-content-md5: 6beeadee983f7374617861c5e603d022
+Text-content-sha1: c7b0320947b6d07945a529d01abb22cebcbf799d
+Text-content-length: 68
+Content-length: 68
+
+This is a sample file.
+
+This is our first line of modified content.
+
+
+Revision-number: 4
+Prop-content-length: 114
+Content-length: 114
+
+K 10
+svn:author
+V 3
+esr
+K 8
+svn:date
+V 27
+2011-11-30T16:46:05.627972Z
+K 7
+svn:log
+V 16
+Third revision.
+
+PROPS-END
+
+Node-path: trunk/README
+Node-kind: file
+Node-action: change
+Text-content-md5: 6b367fede2aa8d872192cbe7f184b0ce
+Text-content-sha1: 9b38d27fe0acb2c33072d195a1e05e4b360c9f21
+Text-content-length: 114
+Content-length: 114
+
+This is a sample file.
+
+This is our first line of modified content.
+
+This is our second line of modified content.
+
+
+Revision-number: 5
+Prop-content-length: 125
+Content-length: 125
+
+K 10
+svn:author
+V 3
+esr
+K 8
+svn:date
+V 27
+2011-12-05T11:27:20.130826Z
+K 7
+svn:log
+V 27
+Adding a property setting.
+
+PROPS-END
+
+Node-path: trunk/README
+Node-kind: file
+Node-action: change
+Prop-content-length: 26
+Content-length: 26
+
+K 3
+foo
+V 3
+bar
+PROPS-END
+
+
